@@ -1,6 +1,6 @@
 package lv.javaguru.travel.insurance.core.underwriting.calculators.medical;
 
-import lv.javaguru.travel.insurance.core.api.dto.AgreementDTO;
+import lv.javaguru.travel.insurance.core.api.dto.PersonDTO;
 import lv.javaguru.travel.insurance.core.domain.MedicalRiskLimitLevel;
 import lv.javaguru.travel.insurance.core.repositories.MedicalRiskLimitLevelRepository;
 import lv.javaguru.travel.insurance.core.util.SetUpInstancesHelper;
@@ -9,12 +9,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.Date;
-import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -31,15 +30,13 @@ class MedicalRiskLimitLevelCoefficientRetrieverTest {
 
     @InjectMocks
     private MedicalRiskLimitLevelCoefficientRetriever limitLevelCoefficientRetriever;
-
-    @Autowired
     @InjectMocks
     private SetUpInstancesHelper helper;
 
     @Test
     void setLimitLevelCoefficient_shouldFindCoefficientWhenCoefficientExists() {
         ReflectionTestUtils.setField(limitLevelCoefficientRetriever, "medicalRiskLimitLevelEnabled", Boolean.TRUE);
-        AgreementDTO agreement = helper.newAgreementDTO();
+        PersonDTO person = helper.newPersonDTO();
         BigDecimal limitLevelCoefficient = BigDecimal.valueOf(1.2);
 
         MedicalRiskLimitLevel limitLevelMock = mock(MedicalRiskLimitLevel.class);
@@ -47,35 +44,29 @@ class MedicalRiskLimitLevelCoefficientRetrieverTest {
                 .thenReturn(Optional.of(limitLevelMock));
         when(limitLevelMock.getCoefficient()).thenReturn(limitLevelCoefficient);
 
-        BigDecimal actualLimitLevelCoefficient = limitLevelCoefficientRetriever.setLimitLevelCoefficient(agreement);
+        BigDecimal actualLimitLevelCoefficient = limitLevelCoefficientRetriever.setLimitLevelCoefficient(person);
         assertEquals(limitLevelCoefficient, actualLimitLevelCoefficient);
     }
 
     @Test
     void setLimitLevelCoefficient_shouldThrowExceptionWhenCoefficientDoesNotExist() {
         ReflectionTestUtils.setField(limitLevelCoefficientRetriever, "medicalRiskLimitLevelEnabled", Boolean.TRUE);
-        AgreementDTO agreement = new AgreementDTO(
-                new Date(2025 - 1900, 2, 10),
-                new Date(2025 - 1900, 2, 11),
-                "SPAIN",
-                "INVALID",
-                List.of("TRAVEL_MEDICAL", "TRAVEL_CANCELLATION", "TRAVEL_LOSS_BAGGAGE"),
-                List.of(helper.newPersonDTO()),
-                BigDecimal.ZERO);
+        PersonDTO person = new PersonDTO("Jānis", "Bērziņš",
+                new Date(1990 - 1900, 0, 1), "INVALID", Collections.emptyList());
         when(limitLevelRepositoryMock.findByMedicalRiskLimitLevelIc("INVALID"))
                 .thenReturn(Optional.empty());
 
         RuntimeException exception = assertThrows(RuntimeException.class, () -> limitLevelCoefficientRetriever
-                .setLimitLevelCoefficient(agreement));
+                .setLimitLevelCoefficient(person));
         assertEquals("Medical risk limit level = INVALID coefficient not found!", exception.getMessage());
     }
 
     @Test
     void seLimitLevelCoefficient_shouldReturnDefaultValueWhenRiskLimitLevelDisabled() {
         ReflectionTestUtils.setField(limitLevelCoefficientRetriever, "medicalRiskLimitLevelEnabled", Boolean.FALSE);
-        AgreementDTO agreement = helper.newAgreementDTO();
+        PersonDTO person = helper.newPersonDTO();
 
-        BigDecimal actualLimitLevelCoefficient = limitLevelCoefficientRetriever.setLimitLevelCoefficient(agreement);
+        BigDecimal actualLimitLevelCoefficient = limitLevelCoefficientRetriever.setLimitLevelCoefficient(person);
         assertEquals(BigDecimal.ONE, actualLimitLevelCoefficient);
     }
 
